--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gonzaga Calculator Activity #2</title>
+    <title>Gonzaga Working Calculator</title>
     <style>
         table { 
             border: 4px solid black; 
